/*
 * Copyright (C) 2015 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
option java_package = "com.android.car.vehiclenetwork";
option optimize_for = LITE_RUNTIME;

//TODO define all enums, property values

message VehiclePropConfig {
    required int32 prop = 1;
    required int32 access = 2;
    required int32 change_mode = 3;
    required int32 value_type = 4;
    required int32 permission_model = 5;
    required int32 config_flags = 6;
    required float sample_rate_max = 7;
    required float sample_rate_min = 8;
    optional string config_string = 9;
    optional float float_max = 10;
    optional float float_min = 11;
    optional int32 int32_max = 12;
    optional int32 int32_min = 13;
    optional int64 int64_max = 14;
    optional int64 int64_min = 15;
};

message VehiclePropConfigs {
    repeated VehiclePropConfig configs = 1;
};

message ZonedValue {
    required int32 zone_or_window = 1;
    optional int32 int32_value = 2; // also covers boolean value.
    optional float float_value = 3;
};

message VehiclePropValue {
    // common data
    required int32 prop = 1;
    required int32 value_type = 2;
    required int64 timestamp = 3;
    // values
    optional int32 int32_value = 4; // this also covers boolean value.
    optional int64 int64_value = 5;
    optional float float_value = 6;
    optional string string_value = 7;
    optional bytes bytes_value = 8;
    optional ZonedValue zoned_value = 9;
};

message VehiclePropValues {
    repeated VehiclePropValue values = 1;
};
